--- a/Angular v2.2 Template/styles.css
+++ b/Angular v2.2 Template/styles.css
@@ -2,12 +2,13 @@ h1 {
   color: #369;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 250%;
+  text-align: center;
 }
 
-user-list {
-
+.userInfoList {
+  width: 80%;
 }
 
-user-list > th {
+.alignCenter {
   text-align: center;
 }
